# screenfile

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-binaries.yml  release-binaries.yml
screenfile/: __init__.py  __main__.py  chunking.py  cli.py  demo.py  frame_codec.py  payload_codec.py  recovery.py  video_io.py
scripts/: build_executable.py  build_windows.bat  build_windows.ps1  demo_roundtrip.py  package_artifact.py
tests/: test_screenfile.py
