[project]
name = "screenfile"
version = "0.2.2"
description = "Encode files into screen-recordable videos and recover them from recordings."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "opencv-python-headless>=4.10",
  "zstandard>=0.23",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.0",
]

[project.scripts]
screenfile = "screenfile.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
